--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -9,6 +9,7 @@
 
 // COMPONENTS
 @import "components/_header";
+@import "components/_blog-hero-area";
 @import "components/_cta-area";
 @import "components/_footer";
 @import "components/_go-to-top";
