--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -383,7 +383,8 @@ body.fixed-nav #header {
 
 .blog-hero-area .blog-slider-wrapper {
   position: relative;
-  z-index: 1; }
+  z-index: 1;
+  height: 620px; }
   .blog-hero-area .blog-slider-wrapper .social-media-share {
     border: 10px solid #0071bd;
     width: 240px;
@@ -392,7 +393,8 @@ body.fixed-nav #header {
     position: absolute;
     top: 50%;
     margin-top: -170px;
-    right: 0; }
+    right: 0;
+    z-index: 9; }
     .blog-hero-area .blog-slider-wrapper .social-media-share .social-link-vertical ul li {
       display: block;
       margin-bottom: 25px; }
@@ -433,7 +435,38 @@ body.fixed-nav #header {
         color: #4a4a4a;
         font-weight: 400; }
   .blog-hero-area .blog-slider-wrapper .blog-slider-inner .single-blog .blog-slider-image {
-    max-width: 82%; }
+    max-width: 82%;
+    height: 640px;
+    background-size: cover;
+    background-position: center;
+    display: block;
+    user-select: none; }
+.blog-hero-area .slider-pagination {
+  display: none; }
+.blog-hero-area .slider-navigation-previous {
+  display: none; }
+.blog-hero-area .slider-navigation-next {
+  right: 42.4%;
+  top: 89%;
+  height: 88px;
+  width: 88px;
+  border-radius: 0;
+  margin-left: -44px;
+  box-shadow: none; }
+  .blog-hero-area .slider-navigation-next svg {
+    width: 20%;
+    color: #0071bd; }
+  .blog-hero-area .slider-navigation-next:hover {
+    transform: scale(1); }
+
+.blog-bg-1 {
+  background-image: url(/assets/images/slider-image/s-1.jpg); }
+
+.blog-bg-2 {
+  background-image: url(/assets/images/slider-image/s-2.jpg); }
+
+.blog-bg-3 {
+  background-image: url(/assets/images/slider-image/s-3.jpg); }
 
 .blog-left-sidebar {
   position: sticky;
