--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -252,27 +252,62 @@ textarea.textarea {
   color: #ffffff;
   background: #0071bd; }
 
-.slider-pagination .slider-page {
-  background-color: #e9e9e9;
-  border-radius: 50px;
-  width: 8px;
-  height: 4px;
-  box-shadow: none;
-  margin: 0 5px; }
-  .slider-pagination .slider-page.is-active {
-    background-color: #0071bd;
-    width: 20px; }
+.meta-date {
+  font-size: 16px; }
+  .meta-date i {
+    color: #0071bd; }
 
-.tooltip.is-tooltip-active::before,
-.tooltip:hover::before {
-  background-color: #1c2c41; }
+.author {
+  font-weight: 500;
+  color: #0071bd;
+  margin-bottom: 20px; }
+  .author span {
+    color: #4a4a4a;
+    font-weight: 400; }
 
-.tooltip.is-tooltip-active:not(.is-loading)::after,
-.tooltip:focus:not(.is-loading)::after,
-.tooltip:hover:not(.is-loading)::after {
-  border-color: #1c2c41 transparent transparent transparent;
-  top: -1px; }
+.social-link-vertical ul li {
+  display: block;
+  margin-bottom: 25px; }
+  .social-link-vertical ul li:last-child {
+    margin-bottom: 0; }
+  .social-link-vertical ul li a {
+    font-size: 20px;
+    display: inline-block;
+    text-align: center;
+    line-height: 46px;
+    width: 46px;
+    height: 46px;
+    border-radius: 50%;
+    border: 1px solid #1C2C41;
+    color: #1c2c41; }
+    .social-link-vertical ul li a:hover {
+      color: #ffffff;
+      background: #1c2c41; }
+      .social-link-vertical ul li a:hover i {
+        animation: icon-animation 0.9s both; }
 
+@-webkit-keyframes arrowAnimate {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    -webkit-transform: translateX(0); }
+  40% {
+    -webkit-transform: translateX(-30px); }
+  60% {
+    -webkit-transform: translateX(-15px); } }
+@keyframes arrowAnimate {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateX(0); }
+  40% {
+    transform: translateX(-30px); }
+  60% {
+    transform: translateX(-15px); } }
 .pt-0 {
   padding-top: 0; }
 
@@ -395,26 +430,6 @@ body.fixed-nav #header {
     margin-top: -170px;
     right: 0;
     z-index: 9; }
-    .blog-hero-area .blog-slider-wrapper .social-media-share .social-link-vertical ul li {
-      display: block;
-      margin-bottom: 25px; }
-      .blog-hero-area .blog-slider-wrapper .social-media-share .social-link-vertical ul li:last-child {
-        margin-bottom: 0; }
-      .blog-hero-area .blog-slider-wrapper .social-media-share .social-link-vertical ul li a {
-        font-size: 20px;
-        display: inline-block;
-        text-align: center;
-        line-height: 46px;
-        width: 46px;
-        height: 46px;
-        border-radius: 50%;
-        border: 1px solid #1C2C41;
-        color: #1c2c41; }
-        .blog-hero-area .blog-slider-wrapper .social-media-share .social-link-vertical ul li a:hover {
-          color: #ffffff;
-          background: #1c2c41; }
-          .blog-hero-area .blog-slider-wrapper .social-media-share .social-link-vertical ul li a:hover i {
-            animation: icon-animation 0.9s both; }
   .blog-hero-area .blog-slider-wrapper .blog-slider-inner {
     position: relative;
     z-index: 1; }
@@ -445,11 +460,7 @@ body.fixed-nav #header {
         display: block; }
       .blog-hero-area .blog-slider-wrapper .blog-slider-inner .single-blog .blog-content-wrapper .blog-content-inner {
         padding-right: 50px; }
-        .blog-hero-area .blog-slider-wrapper .blog-slider-inner .single-blog .blog-content-wrapper .blog-content-inner .meta-date {
-          font-size: 16px; }
-          .blog-hero-area .blog-slider-wrapper .blog-slider-inner .single-blog .blog-content-wrapper .blog-content-inner .meta-date i {
-            color: #0071bd; }
-        .blog-hero-area .blog-slider-wrapper .blog-slider-inner .single-blog .blog-content-wrapper .blog-content-inner h1 a {
+        .blog-hero-area .blog-slider-wrapper .blog-slider-inner .single-blog .blog-content-wrapper .blog-content-inner h1 {
           display: block;
           font-size: 48px;
           line-height: 60px;
@@ -464,13 +475,6 @@ body.fixed-nav #header {
           -webkit-line-clamp: 6;
           box-orient: vertical;
           -webkit-box-orient: vertical; }
-        .blog-hero-area .blog-slider-wrapper .blog-slider-inner .single-blog .blog-content-wrapper .blog-content-inner .author {
-          font-weight: 500;
-          color: #0071bd;
-          margin-bottom: 20px; }
-          .blog-hero-area .blog-slider-wrapper .blog-slider-inner .single-blog .blog-content-wrapper .blog-content-inner .author span {
-            color: #4a4a4a;
-            font-weight: 400; }
       .blog-hero-area .blog-slider-wrapper .blog-slider-inner .single-blog .blog-slider-image {
         max-width: 82%;
         height: 640px;
@@ -490,28 +494,6 @@ body.fixed-nav #header {
 .blog-bg-3 {
   background-image: url(/assets/images/slider-image/s-3.jpg); }
 
-@-webkit-keyframes arrowAnimate {
-  0%,
-  20%,
-  50%,
-  80%,
-  100% {
-    -webkit-transform: translateX(0); }
-  40% {
-    -webkit-transform: translateX(-30px); }
-  60% {
-    -webkit-transform: translateX(-15px); } }
-@keyframes arrowAnimate {
-  0%,
-  20%,
-  50%,
-  80%,
-  100% {
-    transform: translateX(0); }
-  40% {
-    transform: translateX(-30px); }
-  60% {
-    transform: translateX(-15px); } }
 .blog-left-sidebar {
   position: sticky;
   top: 120px; }
@@ -857,5 +839,95 @@ p.spam-message {
 
 .go-to-top.is-visible {
   opacity: 1; }
+
+.blog-details-area {
+  padding-bottom: 100px; }
+
+.blog-heading h1 {
+  font-size: 48px;
+  line-height: 68px; }
+
+figure a {
+  display: block; }
+figure figcaption {
+  max-width: 80%;
+  margin: 0 auto;
+  color: #4a4a4a;
+  opacity: 0.8;
+  padding: 10px 0;
+  border-bottom: 1px solid #e8e8e8; }
+
+.sticky-social-menu {
+  position: sticky;
+  top: 100px; }
+
+.code-block-heading {
+  display: flex;
+  justify-content: space-between;
+  background: #f0f3f6;
+  padding: 10px;
+  border-radius: 4px 4px 0 0;
+  overflow: hidden;
+  border: 1px solid #d1d5d9;
+  border-bottom: transparent; }
+  .code-block-heading h4 {
+    font-size: 16px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400; }
+  .code-block-heading .copy-here {
+    background: transparent;
+    border: none;
+    color: #9aa2ad;
+    font-size: 20px;
+    cursor: pointer; }
+
+.code-block-wrapper {
+  margin-bottom: 40px; }
+  .code-block-wrapper pre {
+    background-color: #1c2c41;
+    color: #fff;
+    font-size: 14px;
+    margin-bottom: 20px; }
+
+.blog-content h2 {
+  font-size: 36px;
+  font-weight: 700;
+  margin-bottom: 30px; }
+.blog-content p {
+  font-size: 20px;
+  margin-bottom: 20px; }
+.blog-content .inline-button {
+  font-size: 20px; }
+.blog-content ul {
+  padding-left: 20px;
+  margin-bottom: 30px; }
+  .blog-content ul li {
+    font-size: 20px;
+    list-style: disc;
+    margin-bottom: 15px; }
+    .blog-content ul li:last-child {
+      margin-bottom: 0; }
+.blog-content blockquote {
+  font-size: 20px;
+  font-weight: 500;
+  margin-bottom: 10px;
+  color: #1c2c41;
+  text-indent: -50px; }
+  .blog-content blockquote:before {
+    padding-right: 20px;
+    content: url(/assets/images/icons/quote.svg); }
+.blog-content .name-descriptor {
+  font-size: 20px;
+  text-indent: -50px;
+  margin-bottom: 20px; }
+  .blog-content .name-descriptor::before {
+    content: url(/assets/images/icons/line.svg);
+    padding-right: 8px; }
+  .blog-content .name-descriptor span {
+    font-size: 16px; }
+.blog-content .tags .tag {
+  height: 36px;
+  font-size: 14px;
+  padding: 5px 20px; }
 
 /*# sourceMappingURL=style.css.map */
