--- a/assets/sass/base/_global.scss
+++ b/assets/sass/base/_global.scss
@@ -159,10 +159,9 @@ h6 {
   background: transparent;
   border: none;
 }
-button.button{
+button.button {
   padding: 10px 35px;
   height: auto;
-
 }
 .section-padding {
   padding: 100px 0;
@@ -271,30 +270,86 @@ textarea.textarea {
   color: $white-color;
   background: $primary-color;
 }
-.slider-pagination {
-  .slider-page {
-    background-color: #e9e9e9;
-    border-radius: 50px;
-    width: 8px;
-    height: 4px;
-    box-shadow: none;
-    margin: 0 5px;
-    &.is-active {
-      background-color: $primary-color;
-      width: 20px;
+ 
+//for blog
+.meta-date {
+  font-size: 16px;
+  i {
+    color: $primary-color;
+  }
+}
+.author {
+  font-weight: 500;
+  color: $primary-color;
+  margin-bottom: 20px;
+  span {
+    color: $paragraph-color;
+    font-weight: 400;
+  }
+}
+//vertical social link style
+.social-link-vertical {
+  ul {
+    li {
+      display: block;
+      margin-bottom: 25px;
+      &:last-child {
+        margin-bottom: 0;
+      }
+      a {
+        font-size: 20px;
+        display: inline-block;
+        text-align: center;
+        line-height: 46px;
+        width: 46px;
+        height: 46px;
+        border-radius: 50%;
+        border: 1px solid#1C2C41;
+        color: #1c2c41;
+        &:hover {
+          color: $white-color;
+          background: #1c2c41;
+          i {
+            animation: icon-animation 0.9s both;
+          }
+        }
+      }
     }
   }
 }
-.tooltip.is-tooltip-active::before,
-.tooltip:hover::before {
-  background-color: #1c2c41;
+//animation
+@-webkit-keyframes arrowAnimate {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    -webkit-transform: translateX(0);
+  }
+  40% {
+    -webkit-transform: translateX(-30px);
+  }
+  60% {
+    -webkit-transform: translateX(-15px);
+  }
 }
-.tooltip.is-tooltip-active:not(.is-loading)::after,
-.tooltip:focus:not(.is-loading)::after,
-.tooltip:hover:not(.is-loading)::after {
-  border-color: #1c2c41 transparent transparent transparent;
-  top: -1px;
+
+@keyframes arrowAnimate {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateX(0);
+  }
+  40% {
+    transform: translateX(-30px);
+  }
+  60% {
+    transform: translateX(-15px);
+  }
 }
+
 .pt-0 {
   padding-top: 0;
 }
