responsive blog page

--- a/assets/sass/components/_cta-area.scss
+++ b/assets/sass/components/_cta-area.scss
@@ -52,3 +52,56 @@
   }
 }
 // cta area end
+
+/*=================================================================================================
+                                    Responsive code start
+=================================================================================================*/
+/**************************************************************** 
+                  Full HD Min Width 1407
+**************************************************************** */
+/* Full HD Min Width 1408px */
+@media (min-width: 1408px) {
+}
+
+/**************************************************************** 
+                  Widescreen Between 1216px and 1407px
+**************************************************************** */
+@media (min-width: 1216px) and (max-width: 1407px) {
+}
+
+/**************************************************************** 
+                  Desktop Between 1024px and 1215px
+**************************************************************** */
+@media (min-width: 1024px) and (max-width: 1215px) {
+}
+/**************************************************************** 
+                  Tablet Between 769px and 1023px
+**************************************************************** */
+@media (min-width: 769px) and (max-width: 1023px) {
+  
+}
+
+/**************************************************************** 
+                    Mobile Up to 768px. 
+**************************************************************** */
+@media only screen and (min-width: 100px) and (max-width: 768px) {
+  .cta-area {
+    .cta-buttons {
+      .button{
+          margin-right: 10px !important;
+      }
+    }
+    .section-title {
+      &.is-dark-bg{
+        h2{
+          font-size: 26px;
+          line-height: 38px;
+        }
+      }
+      }
+  }
+}
+
+/*=================================================================================================
+                                    Responsive code end
+=================================================================================================*/
