--- a/assets/sass/layouts/_blog-details.scss
+++ b/assets/sass/layouts/_blog-details.scss
@@ -8,7 +8,8 @@
   }
 }
 figure {
-  a {
+  img {
+    user-select: none;
     display: block;
   }
   figcaption {
@@ -45,7 +46,7 @@ figure {
     border: none;
     color: #9aa2ad;
     font-size: 20px;
-    cursor: pointer;
+    cursor: copy
   }
 }
 .code-block-wrapper {
@@ -113,3 +114,43 @@ figure {
     }
   }
 }
+
+
+/*=================================================================================================
+                                    Responsive code start
+=================================================================================================*/
+/**************************************************************** 
+                  Full HD Min Width 1407
+**************************************************************** */
+/* Full HD Min Width 1408px */
+@media (min-width: 1408px) {
+}
+
+/**************************************************************** 
+                  Widescreen Between 1216px and 1407px
+**************************************************************** */
+@media (min-width: 1216px) and (max-width: 1407px) {
+}
+
+/**************************************************************** 
+                  Desktop Between 1024px and 1215px
+**************************************************************** */
+@media (min-width: 1024px) and (max-width: 1215px) {
+}
+/**************************************************************** 
+                  Tablet Between 769px and 1023px
+**************************************************************** */
+@media (min-width: 769px) and (max-width: 1023px) {
+  
+}
+
+/**************************************************************** 
+                    Mobile Up to 768px. 
+**************************************************************** */
+@media only screen and (min-width: 100px) and (max-width: 768px) {
+  
+}
+
+/*=================================================================================================
+                                    Responsive code end
+=================================================================================================*/
