--- a/assets/sass/base/_global.scss
+++ b/assets/sass/base/_global.scss
@@ -42,7 +42,6 @@ h5 a,
 h6 a {
   font-family: $font-heading;
   font-weight: normal;
-  text-transform: normal;
   font-style: normal;
   margin-top: 0px;
   color: $heading-color;
@@ -309,6 +308,18 @@ textarea.textarea {
         &:hover {
           color: $white-color;
           background: #1c2c41;
+          &.linkedin{
+            background-color: #0E76A8;
+            border: 1px solid #0E76A8;
+          }
+          &.twitter{
+            background-color: #1DA1F2;
+            border: 1px solid #1DA1F2;
+          }
+          &.facebook{
+            background-color: #3B5998;
+            border: 1px solid #3B5998;
+          }
           i {
             animation: icon-animation 0.9s both;
           }
@@ -398,12 +409,19 @@ textarea.textarea {
                     Mobile Up to 768px. 
 **************************************************************** */
 @media only screen and (min-width: 100px) and (max-width: 768px) {
+  .button.is-large {
+    padding: 20px 30px;
+    font-size: 14px;
+  }
   .button.is-sm-medium {
     padding: 20px 30px;
     font-size: 14px;
   }
   .section-padding-60 {
     padding: 30px 0;
+  }
+  .section-padding {
+    padding: 50px 0;
   }
 }
 
