--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -54,7 +54,7 @@
         <nav class="navbar customize-navbar" role="navigation" aria-label="main navigation">
           <!-- navbar brand start -->
           <div class="navbar-brand">
-            <a class="navbar-item" href="/">
+            <a class="navbar-item" href="{{.Site.Params.domain_bytebuilders}}">
               <img src="{{ .Site.Data.products.bytebuilders.logo.src }}" />
             </a>
 
